--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&display=swap');
 /* ----------------------Variables */
 :root{
-  --green-color:#6ddd12;
+  --green-color:#396362;
   --white-color:white;
   --border-color:#124555;
   /* tipografia */
@@ -19,8 +19,9 @@ html,body{
   padding: 0px;
   margin: 0px;
   font-size: var(--normal);
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: 'Teko', sans-serif;
 }
+
 label{
   font-size: var(--normal);
   padding-bottom: var(--space);
@@ -29,9 +30,11 @@ nav{
   display: flex;
   background-color: var(--green-color);
   padding: var(--space);
-  color: var(--white-color);
+  color: #9f93a6;
   justify-content: space-between;
   align-items: center;
+  text-decoration: underline;
+  background-position: center top;
 }
 nav ul{
   display: flex;
@@ -52,6 +55,10 @@ nav li a:hover{
 .main_section{
   padding: 15%;
   text-align: center;
+  background-color: white;
+  border: 4px dotted gray;
+  border-radius: 10px;
+
 }
 
 .products{
@@ -61,6 +68,7 @@ nav li a:hover{
   background-position: center top;
   padding: 15%;
   display: flex;
+  justify-content: center;
 }
 .product{
   padding: var(--space);
@@ -109,11 +117,118 @@ nav li a:hover{
 .modulo_registro .main_button{
   margin-top: 10px;
 }
+.title-h1{
+  letter-spacing: 10px;
+  color: #6b676b;
+  font-family: Cinzel;
+}
+
+.event-list{
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  text-align: center;
+
+
+  }
+
+  .event-list-title{
+    color: #fbfbfb;
+    text-transform: uppercase;
+    font-size: 34px;
+    font-weight: bold;
+    padding: 20px;
+  }
+
+.event{
+  border: 1px solid;
+  background: #f7f5f4;
+  background-position: center top;
+  display: flex;
+  border-radius: 10px;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+
+}
+.event-image{
+  width: 380px;
+  display: flex;
+  object-fit: cover;
+
+}
+.event-detail{
+  width: 500px;
+
+}
+.event-description{
+  margin: 20px;
+
+}
+.event-url{
+  color: #34bd7c;
+  border: 1px solid;
+  padding: 5px 20px;
+  text-decoration: none;
+  border-radius: 5px;
+}
+.contact{
+  background-color:white;
+  color: #0fad46;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.social{
+
+
+}
+.social-link.twitter.youtube.github{
+  display: inline-block;
+  padding: 10px;
+  width: 20px;
+  height: 20px;
+  margin: 0 10px;
+  background-size: 50px 50px;
+
+}
+
+.form-email input{
+  border-color: gray;
+  border-style: solid;
+  border-radius: 5px;
+}
+.form-email button{
+  display: block;
+  background: transparent;
+  border-radius: 5px;
+  width: 100px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  cursor: pointer;
+
+}
+
+.container{
+  text-align: center;
+  width: 1000px;
+  margin: 0 auto;
+  display: inherit;
+  justify-content: inherit;
+  align-items: inherit;
+  height: inherit;
+  flex-wrap: inherit;
+  background-position: center top;
+}
+
 footer{
   display: flex;
   justify-content: space-between;
   font-size: 20px;
-  background-color: #02b367;
+  font-family: 'Cinzel', sans-serif;
+  font-weight: 100;
+  background-color: var(--green-color);
   padding: var(--space);
   color: white;
 }
