--- a/css/estilos.css
+++ b/css/estilos.css
@@ -20,6 +20,7 @@ html,body{
   margin: 0px;
   font-size: var(--normal);
   font-family: 'Teko', sans-serif;
+  text-align: center;
 }
 
 label{
@@ -28,10 +29,11 @@ label{
 }
 nav{
   display: flex;
+  flex-wrap: wrap;
   background-color: var(--green-color);
   padding: var(--space);
   color: #9f93a6;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   text-decoration: underline;
   background-position: center top;
@@ -130,6 +132,7 @@ nav li a:hover{
   text-align: center;
 
 
+
   }
 
   .event-list-title{
@@ -149,16 +152,19 @@ nav li a:hover{
   align-items: center;
   justify-content: space-between;
   text-align: center;
+  flex-wrap: wrap;
 
 }
+
 .event-image{
-  width: 380px;
-  display: flex;
+  width: 50%;
   object-fit: cover;
+
 
 }
 .event-detail{
-  width: 500px;
+  width: 50%;
+  flex: auto;
 
 }
 .event-description{
@@ -179,9 +185,10 @@ nav li a:hover{
   display: flex;
   align-items: center;
   justify-content: space-between;
+
 }
 .social{
-
+padding: 1em;
 
 }
 .social-link.twitter.youtube.github{
@@ -191,6 +198,7 @@ nav li a:hover{
   height: 20px;
   margin: 0 10px;
   background-size: 50px 50px;
+  flex-wrap: wrap;
 
 }
 
@@ -198,6 +206,7 @@ nav li a:hover{
   border-color: gray;
   border-style: solid;
   border-radius: 5px;
+  flex-wrap: wrap;
 }
 .form-email button{
   display: block;
@@ -210,9 +219,13 @@ nav li a:hover{
 
 }
 
+.form-email h3{
+  margin-block-end: auto;
+}
+
 .container{
   text-align: center;
-  width: 1000px;
+  max-width: 1000px;
   margin: 0 auto;
   display: inherit;
   justify-content: inherit;
@@ -224,6 +237,7 @@ nav li a:hover{
 
 footer{
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   font-size: 20px;
   font-family: 'Cinzel', sans-serif;
@@ -231,4 +245,71 @@ footer{
   background-color: var(--green-color);
   padding: var(--space);
   color: white;
+}
+
+img.twitter{
+  padding: 1em;
+}
+img.youtube{
+  padding: 1em;
+}
+img.github{
+  padding: 1em;
+}
+img.behance{
+  padding: 1em;
+}
+
+@media screen and (max-width: 1024px){
+  .container{
+    padding: 0 1em;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav_options{
+    display: block;
+    height: auto;
+  }
+  .nav.fadeInDown {
+    display: initial;
+  }
+  .nav ul{
+    display: initial;
+  }
+  .nav_options ul{
+    display: block;
+  }
+  .nav_options ul li{
+    height: 50px;
+  }
+  .nav_options a  {
+    justify-content: center;
+  }
+  .nav_options .brand_logo{
+    text-align: center;
+  }
+  .nav li a{
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 480px){
+  .contact {
+    height: auto;
+    padding: 1em 0;
+    text-align: center;
+    display: block;
+  }
+  .form-email button{
+    margin: 1em auto;
+  }
+  .form-email h3{
+    margin-top: 0;
+  }
+  .footer{
+    display: block;
+    text-align: center;
+    border: 1px solid transparent;
+  }
+
 }
