--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700&display=swap');
 /* ----------------------Variables */
 :root{
-  --green-color:#396362;
+  --green-color:#494b4b;
   --white-color:white;
   --border-color:#124555;
   /* tipografia */
@@ -12,6 +12,45 @@
   /* ---boxshadow */
   --box:0 0 8px #acacac;
 }
+/* ----------------------iconos */
+@font-face {
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?nrsr04');
+  src:  url('../fonts/icomoon.eot?nrsr04#iefix') format('embedded-opentype'),
+    url('../fonts/icomoon.ttf?nrsr04') format('truetype'),
+    url('../fonts/icomoon.woff?nrsr04') format('woff'),
+    url('../fonts/icomoon.svg?nrsr04#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-rocket:before {
+  content: "\e9a5";
+}
+.icon-menu3:before {
+  content: "\e9bf";
+}
+.icon-earth:before {
+  content: "\e9ca";
+}
+
+
 
 
 /* ----------------------Variables */
@@ -21,6 +60,7 @@ html,body{
   font-size: var(--normal);
   font-family: 'Teko', sans-serif;
   text-align: center;
+
 }
 
 label{
@@ -32,7 +72,7 @@ nav{
   flex-wrap: wrap;
   background-color: var(--green-color);
   padding: var(--space);
-  color: #9f93a6;
+  color: gray;
   justify-content: center;
   align-items: center;
   text-decoration: underline;
@@ -95,6 +135,7 @@ nav li a:hover{
   border-radius: 4px;
 
 }
+
 .main_button:hover{
   background-color: #2fcc7d;
 }
@@ -168,7 +209,8 @@ nav li a:hover{
 
 }
 .event-description{
-  margin: 20px;
+  margin: 1em;
+
 
 }
 .event-url{
@@ -260,6 +302,11 @@ img.behance{
   padding: 1em;
 }
 
+.html-video{
+  width: 100%;
+  height: auto;
+}
+
 @media screen and (max-width: 1024px){
   .container{
     padding: 0 1em;
@@ -292,6 +339,11 @@ img.behance{
   .nav li a{
     justify-content: center;
   }
+  .event-description{
+    margin: 1em;
+    font-size: 18px;
+
+  }
 }
 @media screen and (max-width: 480px){
   .contact {
@@ -311,5 +363,9 @@ img.behance{
     text-align: center;
     border: 1px solid transparent;
   }
+  .title-h1{
+    font-size: 14px;
+  }
+
 
 }
